fixed dark mode issue

--- a/css/style.css
+++ b/css/style.css
@@ -905,7 +905,7 @@ article p {
 
 /* for iPad dark mode */
 @media screen and (min-width: 681px) and (max-width: 960px) and (prefers-color-scheme: dark) {
-    .social, .post {
+    .social, .post, .about-site-info {
         background-color: #121212;
     }
 
